--- a/zhilianyc/app/src/main/res/values/strings.xml
+++ b/zhilianyc/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">zhilianyc</string>
+    <string name="app_name">智链云仓</string>
+
+    <string name="login_title">智链云仓(%1$s)</string>
 </resources>
