--- a/zhilianyc/app/src/main/res/values/strings.xml
+++ b/zhilianyc/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">智链云仓</string>
+    <string name="app_name">智趣链仓</string>
 
     <string name="str_tab_new">新闻</string>
     <string name="str_tab_game">游戏</string>
